Add fuzzing to continous integration

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,14 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        
+  fuzz:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Run Fuzz Tests
+        run: python fuzz.py
