Update fuzz python location in YML

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,4 +47,4 @@ jobs:
         with:
           python-version: '3.x'
       - name: Run Fuzz Tests
-        run: python fuzz.py
+        run: python MLForensics-farzana/fuzz.py
